--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.19",
+        "axios": "^0.21.1",
         "bootstrap": "^4.5.0",
         "cross-env": "^7.0",
         "jquery": "^3.5.1",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
-        "resolve-url-loader": "^2.3.1",
+        "resolve-url-loader": "^3.1.2",
         "sass": "^1.26.9",
         "sass-loader": "^8.0.0",
         "vue": "^2.5.17",
@@ -28,6 +28,8 @@
         "bootstrap-table": "^1.16.0",
         "chart.js": "^2.8.0",
         "jquery-ui": "^1.12.1",
-        "list.js": "^1.5.0"
+        "leaflet": "^1.7.1",
+        "list.js": "^1.5.0",
+        "patternomaly": "^1.3.2"
     }
 }
