--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,11 @@
 {
-    "name": "laravel/laravel",
+    "name": "papposilene/podstats-lddm",
     "type": "project",
-    "description": "The Laravel Framework.",
+    "description": "Code-source du site de statistiques du podcast Les Démons du MIDI.",
     "keywords": [
         "framework",
-        "laravel"
+        "laravel",
+        "podcast"
     ],
     "license": "MIT",
     "require": {
@@ -12,17 +13,15 @@
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
-        "laravel/framework": "^8",
+        "laravel/framework": "^7.28",
         "laravel/scout": "^8.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "maatwebsite/excel": "^3.1",
-        "recca0120/terminal": "^1.8",
         "spatie/laravel-activitylog": "^3.14",
         "spatie/laravel-permission": "^3.11",
         "spatie/laravel-translatable": "^4.3",
         "teamtnt/laravel-scout-tntsearch-driver": "^8.3",
-        "webpatser/laravel-uuid": "^3.0",
         "yadahan/laravel-authentication-log": "^1.2"
     },
     "require-dev": {
